# url_shortener

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  swagger.json
core/: config.py  models.py  schemas.py
routes/: admin_routes.py  api_routes.py  auth_routes.py  bulk_routes.py  url_routes.py  user_routes.py
utils/: auth.py  qr_generator.py  url_generator.py  validators.py
