[project]
name = "url-shortener"
version = "1.0.0"
description = "A feature-rich Flask-based URL shortener application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.3.0",
    "flask-sqlalchemy>=3.0.0",
    "marshmallow>=3.19.0",
    "flask-limiter>=3.0.0",
    "python-dotenv>=1.0.0",
    "qrcode[pil]>=7.4.0",
    "requests>=2.31.0",
    "flask-login>=0.6.0",
    "werkzeug>=2.3.0",
    "flask-restx>=1.3.0",
    "tool>=0.8.0",
    "ruff>=0.14.1",
]
